changed title to enchiridion

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Codesmith LA Cohort 42 Solo Project</title>
 </head>
 <body>
-  <h1>Codesmith LA Cohort 42 Solo Project</h1>
+  <h1>Enchiridion</h1>
   <div id="root"></div>
 
   <script src="build/bundle.js"></script>
